# Reader-Mac

./: .gitignore  README.md
ReaderApp/: CMakeLists.txt
ReaderApp/Resources/: AppIcon.icns  Info.plist  bs.json
ReaderApp/src/: ActivationWindowController.h  ActivationWindowController.mm  AppDelegate.mm  CoreTextMetrics.h  CoreTextMetrics.mm  GlobalHotkey.h  GlobalHotkey.mm  KeyBindings.h  KeyBindings.mm  KeyRecorderButton.h  KeyRecorderButton.mm  License.h  License.mm  OnlineBookmarket.h  OnlineBookmarket.mm  PreferencesWindowController.h  PreferencesWindowController.mm  ReaderCanvasView.h  ReaderCanvasView.mm
ReaderCli/: CMakeLists.txt  main.cpp
ReaderCore/: CMakeLists.txt
ReaderCore/include/reader/: book.h  book_listener.h  defaults.h  epub_book.h  file_system.h  html_parser.h  https.h  mobi_book.h  online_book.h  page.h  platform.h  text_book.h  text_metrics.h  types.h  utils.h
ReaderCore/platform/macos/: https_nsurl.mm
ReaderCore/src/: book.cpp  defaults.cpp  epub_book.cpp  file_system_posix.cpp  html_parser.cpp  mobi_book.cpp  online_book.cpp  page.cpp  platform_posix.cpp  text_book.cpp  utils.cpp
ReaderCore/tests/: test_html_parser.cpp  test_main.cpp  test_page.cpp  test_utils.cpp
docs/: RELEASE_GUIDE.md
scripts/: make_dmg.sh
